# DocuChat

client/: app.vue  nuxt.config.ts  package-lock.json  package.json
client/assets/css/: main.css
client/components/: Footer.vue  Navbar.vue
client/components/conversations/: DateDisplay.vue  Header.vue  List.vue  Row.vue
client/components/documents/: Header.vue
client/components/inputs/: BaseModal.vue  Email.vue  Password.vue  Text.vue
client/composables/: useApiClient.ts  useApiFetch.ts
client/layouts/: authenticated.vue  default.vue  guest.vue
client/middleware/: auth.ts
client/pages/: index.vue
client/stores/: authStore.ts
server/: .gitignore  pyproject.toml
server/chat/: models.py
server/chat/ai/: state.py
server/chat/ai/nodes/: chat_summarizer_node.py  classification_node.py  message_cleaner_node.py  rag_search_decision_maker_node.py  request_user_node.py  responder_node.py  vector_query_node.py
server/chat/ai/prompt_templates/: chat_summarizer_prompt_template.py  classification_prompt_template.py  message_cleaner_prompt_template.py  responder_prompt_template.py
server/chat/migrations/: 0001_initial.py
server/core/: serializers.py
server/core/migrations/: 0001_initial.py
server/docuchat/: settings.py  urls.py
server/document/: models.py  serializers.py  urls.py  views.py
server/document/migrations/: 0001_initial.py  0002_rename_emebdding_id_documentchunk_embedding_id_and_more.py
server/document/utils/: text_extractor.py  text_splitter.py  vector_operations.py  vector_store.py
server/llm/: langchain_ollama_client.py
(+8 files in other folders)
